WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
219861
[Media in GPU Process][MSE] VP9 stream playback is not smooth
https://bugs.webkit.org/show_bug.cgi?id=219861
Summary
[Media in GPU Process][MSE] VP9 stream playback is not smooth
Peng Liu
Reported
2020-12-14 10:36:26 PST
The return value of MediaSource::buffered() is not updated correctly when the webm source buffer parser is running in the GPU Process.
Attachments
Patch
(8.27 KB, patch)
2020-12-14 15:17 PST
,
Peng Liu
eric.carlson
: review+
Details
Formatted Diff
Diff
Patch for landing
(8.38 KB, patch)
2020-12-14 15:52 PST
,
Peng Liu
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2020-12-14 10:36:53 PST
<
rdar://problem/72303946
>
Peng Liu
Comment 2
2020-12-14 15:17:50 PST
Created
attachment 416199
[details]
Patch
Eric Carlson
Comment 3
2020-12-14 15:25:51 PST
Comment on
attachment 416199
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=416199&action=review
> Source/WebCore/ChangeLog:8 > + No new tests, no new behaviors.
"no new behaviors" is not quite true, since presumably this makes VP9 playback better. It may not be possible to create a non-flaky test for "more smooth", but I think it would be better to say something like that.
Peng Liu
Comment 4
2020-12-14 15:45:13 PST
Comment on
attachment 416199
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=416199&action=review
>> Source/WebCore/ChangeLog:8 >> + No new tests, no new behaviors. > > "no new behaviors" is not quite true, since presumably this makes VP9 playback better. > > It may not be possible to create a non-flaky test for "more smooth", but I think it would be better to say something like that.
No new behavior in the WebCore part. :-) Agree. By the way, I think the layout tests can catch the issue if the "media in GPU Process" feature is enabled.
Peng Liu
Comment 5
2020-12-14 15:52:33 PST
Created
attachment 416200
[details]
Patch for landing
EWS
Comment 6
2020-12-14 19:09:05 PST
Committed
r270819
: <
https://trac.webkit.org/changeset/270819
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 416200
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug