[Media in GPU Process][MSE] VP9 stream playback is not smooth https://bugs.webkit.org/show_bug.cgi?id=219861

Reviewed by Eric Carlson.

Source/WebCore:

Change two methods of `MediaSourcePrivate` to virtual so that we can implement them
in `MediaSourcePrivateRemote` with IPC messages.

* platform/graphics/MediaSourcePrivate.h:
(WebCore::MediaSourcePrivate::setIsSeeking):
(WebCore::MediaSourcePrivate::setTimeFudgeFactor):
(WebCore::MediaSourcePrivate::timeFudgeFactor const):

Source/WebKit:

Add two new IPC messages in `RemoteMediaSourceProxy` to set `m_isSeeking` and
`m_timeFudgeFactor` of the `MediaSourcePrivate` running in the GPU process.

* GPUProcess/media/RemoteMediaSourceProxy.cpp:
(WebKit::RemoteMediaSourceProxy::setIsSeeking):
(WebKit::RemoteMediaSourceProxy::setTimeFudgeFactor):
* GPUProcess/media/RemoteMediaSourceProxy.h:
* GPUProcess/media/RemoteMediaSourceProxy.messages.in:
* WebProcess/GPU/media/MediaSourcePrivateRemote.cpp:
(WebKit::MediaSourcePrivateRemote::setIsSeeking):
(WebKit::MediaSourcePrivateRemote::setTimeFudgeFactor):
* WebProcess/GPU/media/MediaSourcePrivateRemote.h:


Canonical link: https://commits.webkit.org/232468@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@270819 268f45cc-cd09-0410-ab3c-d52691b4dbfc